--- a/Aftership.xcodeproj/xcshareddata/xcschemes/Aftership-SDK.xcscheme
+++ b/Aftership.xcodeproj/xcshareddata/xcschemes/Aftership-SDK.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:Aftership.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "694C210F4A8D7E360891F160837704F5"
+               BuildableName = "libPods.a"
+               BlueprintName = "Pods"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -29,6 +43,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "7387DA9C1C91722F00A17578"
+            BuildableName = "libAftership-SDK.a"
+            BlueprintName = "Aftership-SDK"
+            ReferencedContainer = "container:Aftership.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
