--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-language: objective-c  #1
-osx_image: xcode6.4 #2
-xcode_project: Aftership.xcodeproj #3
-xcode_scheme: Aftership-SDK #4
-xcode_sdk: iphonesimulator8.4 #5
+language: objective-c
+osx_image: xcode7.2
+xcode_workspace: Aftership.workspace
+xcode_scheme: Aftership-SDK
+xcode_sdk: iphonesimulator8.0
